# prac_python

./: .gitignore  README.md  main.py  pyproject.toml
chapters/data-analytics/beta-distribution/: create_histgram.py  model.py  plot_histgram.py  test.py
chapters/data-analytics/gauss/: model.py
chapters/data-analytics/gauss-distribution/: create_histogram.py  model.py
chapters/dynamic-programming/: lcs.py
chapters/gauss/: create_histogram.py  model.py  plot_histogram.py
chapters/multiprocessing/: main.py
chapters/neural-network/: basic-xor-nn-keras.py  basic-xor-nn.py  character-identification.py  keras-cnn-test.py
chapters/neural-network/classify-cat-and-dog/: load_dataset.py  main.py  test_model.py
chapters/neural-network/efficient-net/: fine-tune-b0.py  main.py
chapters/neural-network/mnist/: evaluation-model.py  main.py
chapters/numpy/: base-functions.py
chapters/opencv/: blend.py  contour-extraction.py  edge-detection.py  face-detection.py  feature-extraction.py  gray-scale.py  img-show.py  inversion.py  png-to-jpg.py  realtime-face-detection.py  resize.py  rotate.py  threshold.py
chapters/pkd/: functional.py
dataset/gauss/: val_histogram.csv
dataset/mnist/: mnist_test.npz  mnist_val.npz
models/: character_predictions.npz  gauss_model.keras  mnist_cnn_model.keras  mnist_confusion_count.csv  mnist_confusion_ratio.csv  mnist_model.keras  mnist_model_ep50.keras
models/data-analytics/: beta_model.keras  beta_model_v2.keras  gauss_model.keras
models/neural-network/: mnist_model-ep100.keras  mnist_model-ep50.keras  mnist_model.keras
(+3 files in other folders)
