[project]
name = "practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "graphviz>=0.20.3",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pydot>=4.0.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "tensorflow>=2.19.0",
    "tensorflow-datasets>=4.9.9",
]
